# sar-digital-ip-dev

./: .clang-format  .gitignore  Makefile  README.md
baq/verification/: input.json  output.json  plot.py  test.cpp
baq/verification/models/: baq_compressor.cpp  baq_compressor.h  baq_decompressor.cpp  baq_decompressor.h  baq_fixed_point.cpp  baq_output.h
block-quantizer/: .gitignore  README.md
block-quantizer/.claude/: settings.json
block-quantizer/baq/: README.md
block-quantizer/baq/verification/: CMakeLists.txt
block-quantizer/baq/verification/models/: baq_compressor.cpp  baq_decompressor.cpp  baq_enum.h  baq_fixed_point.h
block-quantizer/baq/verification/models/baq_compressor_lut/: baq_thr.json  baq_var.json
block-quantizer/cmpr/verification/: CMakeLists.txt  README.md  baq.cpp  baq.h  bfpq.cpp  bfpq.h  data_comp.cpp  data_decomp.cpp  macro_utils.h  main.py  utility.h
sar-rx-dsp-verification/source_file/tcl_command/: run_sim.tcl
sar-rx-dsp-verification/source_file/test_pattern/: io_ind_aaf_data.txt
sar-rx-dsp-verification/source_file/testbench/: TestSarRxDsp.sv
sar-rx-dsp-verification/verification/: coef_256_fx.json  freq_resp_gen_analysis.py  gen_io_ind_aaf_data.py  io_ind_aaf_data_analysis.py  io_out_analysis.py  iq_analysis.py  output.json
source_file/: run_compare.sh
source_file/tcl_command/: main_project.tcl
source_file/test_pattern/: io_ind_aaf_data.txt  io_ind_cmd.txt  io_ind_h_data.txt
source_file/testbench/: TestSarRxDsp.sv  cmp_cfg.v
verification/: io_ind_analysis.py  io_out_analysis.py  output_analysis.py  rcf_out_analysis.py
(+126 files in other folders)
